"Stretch To" bone constraint doesn't work properly with "Scene Scale" (Metric Units). #44408

Closed
opened 2015-04-16 08:34:46 +02:00 by Blendy · 14 comments

System Information
Windows 7 64 bit and AMD HD6770 graphic card

Blender Version
Broken: (blender 2.74 or previous versions)
Worked: (not sure)

Short description of error
stretch_to_scale_issue.png
When the scene Metric Units has been set to 0.01, for example, create an armature and add a Stretch To bone constraint to a bone with a target bone, then switch around the Volume Maintain modes of constraint, or after resetting length, the bone with constraint will pop into a wrong length. Even "Reset" length button won't permanently fix it, once grabbing the target bone, the issue continues.
Stretch_To_scale_bug.blend

**System Information** Windows 7 64 bit and AMD HD6770 graphic card **Blender Version** Broken: (blender 2.74 or previous versions) Worked: (not sure) **Short description of error** ![stretch_to_scale_issue.png](https://archive.blender.org/developer/F162940/stretch_to_scale_issue.png) When the scene Metric Units has been set to 0.01, for example, create an armature and add a Stretch To bone constraint to a bone with a target bone, then switch around the Volume Maintain modes of constraint, or after resetting length, the bone with constraint will pop into a wrong length. Even "Reset" length button won't permanently fix it, once grabbing the target bone, the issue continues. [Stretch_To_scale_bug.blend](https://archive.blender.org/developer/F162947/Stretch_To_scale_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Joshua Leung was assigned by Blendy 2015-04-16 08:34:46 +02:00
Author

Added subscriber: @Rays-Lv

Added subscriber: @Rays-Lv
Author

Additional: Maybe you should also check the other constraint types based on the same mechanism for this issue. I haven't tested them all.

Additional: Maybe you should also check the other constraint types based on the same mechanism for this issue. I haven't tested them all.

This issue was referenced by 0b691563ea

This issue was referenced by 0b691563eaff385d23c4199c85dc47a188420284
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 0b691563ea.

Closed by commit 0b691563ea.
Member

The problem here was that the property was hard limited to only having a maximum of 100 blender units (or 1m in the metric units you were using), so the rest length was getting clipped instead of being handled correctly.

I'm not sure how you ended up needing to make a 4m long bone, though it should be noted that you may run into other problems at this scale eventually.

The problem here was that the property was hard limited to only having a maximum of 100 blender units (or 1m in the metric units you were using), so the rest length was getting clipped instead of being handled correctly. I'm not sure how you ended up needing to make a 4m long bone, though it should be noted that you may run into other problems at this scale eventually.
Author

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Author

In #44408#303248, @JoshuaLeung wrote:
The problem here was that the property was hard limited to only having a maximum of 100 blender units (or 1m in the metric units you were using), so the rest length was getting clipped instead of being handled correctly.

I'm not sure how you ended up needing to make a 4m long bone, though it should be noted that you may run into other problems at this scale eventually.

Look, I need to export animated mesh to UE4 from blender. I tried a couple of methods to handle the scales correctly with UE4, however, the only way I found work properly is keep the Scale of FBX export options exactly same as Scene Scale in blender. Otherwise, the mesh and bones imported in UE4 from blender will be differently scaled. For example, when exporting FBX with scale 100 leaving scene scale default at 1.0 in blender, the mesh imported in UE4 will be 100 times larger than bones. But other softwares like maya got no issue about this. However, the recommended unit in UE4 is cm, for example, this means I must make a 200 units height character to make sure it'll look 2 meters height in UE4. If I make a few meters height monster, a single bone can easily be more than 100 blender units long. But as you said it's not allowed in blender, so, could you tell me a proper way to handle it?

> In #44408#303248, @JoshuaLeung wrote: > The problem here was that the property was hard limited to only having a maximum of 100 blender units (or 1m in the metric units you were using), so the rest length was getting clipped instead of being handled correctly. > > I'm not sure how you ended up needing to make a 4m long bone, though it should be noted that you may run into other problems at this scale eventually. Look, I need to export animated mesh to UE4 from blender. I tried a couple of methods to handle the scales correctly with UE4, however, the only way I found work properly is keep the Scale of FBX export options exactly same as Scene Scale in blender. Otherwise, the mesh and bones imported in UE4 from blender will be differently scaled. For example, when exporting FBX with scale 100 leaving scene scale default at 1.0 in blender, the mesh imported in UE4 will be 100 times larger than bones. But other softwares like maya got no issue about this. However, the recommended unit in UE4 is cm, for example, this means I must make a 200 units height character to make sure it'll look 2 meters height in UE4. If I make a few meters height monster, a single bone can easily be more than 100 blender units long. But as you said it's not allowed in blender, so, could you tell me a proper way to handle it?
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

Ah ok, I see... :)

You may want to ask @mont29 about these issues, since he's more familiar with the state of exporters

Ah ok, I see... :) You may want to ask @mont29 about these issues, since he's more familiar with the state of exporters

I can’t say much… Scale handling by UE4 remains pitch black mystery to me, as you say FBX exported by Blender load OK under other app (personally checked with Unity, you say Maya is OK too), so…

I can’t say much… Scale handling by UE4 remains pitch black mystery to me, as you say FBX exported by Blender load OK under other app (personally checked with Unity, you say Maya is OK too), so…
Author

@JoshuaLeung
Thanks, I've reported the FBX scale bug to him.

But, not allowing a single bone larger than 100 blender units IS another problem. I can't understand why it must be designed like that. Since Blender had already supported various Metric Units, apparently, 100 units bone length limitation can't handle that any more. This section MUST be re-designed. However, the UE4's official animation workflow is also treating 100 units as 1 meter in Maya.

maya_fbx.png
You can see this UE4's official sample character exported from engine project, it also looks very large in Maya (about 200 units height).

@JoshuaLeung Thanks, I've reported the FBX scale bug to him. But, not allowing a single bone larger than 100 blender units IS another problem. I can't understand why it must be designed like that. Since Blender had already supported various Metric Units, apparently, 100 units bone length limitation can't handle that any more. This section MUST be re-designed. However, the UE4's official animation workflow is also treating 100 units as 1 meter in Maya. ![maya_fbx.png](https://archive.blender.org/developer/F163433/maya_fbx.png) You can see this UE4's official sample character exported from engine project, it also looks very large in Maya (about 200 units height).
Author

In #44408#303468, @mont29 wrote:
I can’t say much… Scale handling by UE4 remains pitch black mystery to me, as you say FBX exported by Blender load OK under other app (personally checked with Unity, you say Maya is OK too), so…

@mont29
Hi, mont29. Thanks for replying here. The scale handling of Blender FBX exporter(and importer) actually works not perfect, About this, I'd opened another thread for you, please check it out: https:*developer.blender.org/T44424?workflow=create

> In #44408#303468, @mont29 wrote: > I can’t say much… Scale handling by UE4 remains pitch black mystery to me, as you say FBX exported by Blender load OK under other app (personally checked with Unity, you say Maya is OK too), so… @mont29 Hi, mont29. Thanks for replying here. The scale handling of Blender FBX exporter(and importer) actually works not perfect, About this, I'd opened another thread for you, please check it out: [https:*developer.blender.org/T44424?workflow=create ](https:*developer.blender.org/T44424?workflow=create)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44408
No description provided.